# routes/tweets.js
@@ -7,7 +7,10 @@ import {
   updateTweet,
   deleteTweet,
   likeTweet,
-  unlikeTweet
+  unlikeTweet,
+  retweetTweet,
+  unretweetTweet
+
 } from "../controllers/tweets.js";
 
 import { verifyToken } from "../middleware/auth.js";
@@ -36,8 +39,16 @@ router.get("/:id", verifyToken, getTweetById);
 
 // UPDATE
 router.patch("/:tweetId", verifyToken, updateTweet);
+
 // Like Tweet 
 router.post('/:tweetId/like', verifyToken, likeTweet);
 // Unlike tweet 
 router.post('/:tweetId/unlike', verifyToken, unlikeTweet);
+
+// Route to retweet a tweet
+router.post('/:tweetId/retweet',verifyToken, retweetTweet);
+
+// Route to unretweet a tweet
+router.post('/:tweetId/unretweet',verifyToken, unretweetTweet);
+
 export default router;
